test-function-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-function
  namespace: openfunction
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - '*.syracoffee.io'
      secretName: tls-secret
  rules:
    - host: test-function-staging.syracoffee.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: serving-wbx7t-ksvc-hp6zh
                port:
                  number: 80
